--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -42,7 +42,7 @@ let url = NSURL(string: "http://example.com/")
 NSURL *url = [NSURL URLWithString:@"http://example.com"];
 ```
 
-If the passed string is not a valid URL, this method will return `nil`.
+If the passed string is not a valid URL, this initializer will return `nil`.
 
 `NSString` also has some vestigial functionality for path manipulation, [as described a few weeks back](http://nshipster.com/nstemporarydirectory/), but that's being slowly migrated over to `NSURL`. While the extra conversion from `NSString` to `NSURL` is not the most convenient step, it's always worthwhile. If a value is a URL, it should be stored and passed as an `NSURL`; conflating the two types is reckless and lazy API design.
 
