Update iOS 8 article for Swift 2.0

--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -4,7 +4,8 @@ author: Mattt Thompson
 category: ""
 excerpt: "Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. This week, we'll take a look beneath the headline features, and share some of the more obscure APIs that everyone should know about."
 status:
-    swift: 1.0
+    swift: 2.0
+    reviewed: Sep 12, 2015
 ---
 
 Ask anyone, and they'll tell you: WWDC 2014 was one of the most exciting in recent memory. It was, first and foremost, a developer event, with nary a hardware announcement to upstage the latest software & developer tools.
@@ -51,7 +52,7 @@ let energyFormatter = NSEnergyFormatter()
 energyFormatter.forFoodEnergyUse = true
 
 let joules = 10_000.0
-println(energyFormatter.stringFromJoules(joules)) // "2.39 Cal"
+print(energyFormatter.stringFromJoules(joules)) // "2.39 Cal"
 ~~~
 
 ### NSMassFormatter
@@ -61,7 +62,7 @@ Although the fundamental unit of physical existence, mass is pretty much relegat
 ~~~{swift}
 let massFormatter = NSMassFormatter()
 let kilograms = 60.0
-println(massFormatter.stringFromKilograms(kilograms)) // "132 lb"
+print(massFormatter.stringFromKilograms(kilograms)) // "132 lb"
 ~~~
 
 ### NSLengthFormatter
@@ -71,7 +72,7 @@ Rounding out the new `NSFormatter` subclasses is `NSLengthFormatter`. Think of i
 ~~~{swift}
 let lengthFormatter = NSLengthFormatter()
 let meters = 5_000.0
-println(lengthFormatter.stringFromMeters(meters)) // "3.107 mi"
+print(lengthFormatter.stringFromMeters(meters)) // "3.107 mi"
 ~~~
 
 ## CMPedometer
@@ -86,15 +87,16 @@ import CoreMotion
 let lengthFormatter = NSLengthFormatter()
 let pedometer = CMPedometer()
 pedometer.startPedometerUpdatesFromDate(NSDate(), withHandler: { data, error in
-    if !error {
-        println("Steps Taken: \(data.numberOfSteps)")
+    if let data = data {
+        print("Steps Taken: \(data.numberOfSteps)")
 
-        let distance = data.distance.doubleValue
-        println("Distance: \(lengthFormatter.stringFromMeters(distance))")
+        if let distance = data.distance?.doubleValue {
+            print("Distance: \(lengthFormatter.stringFromMeters(distance))")
 
-        let time = data.endDate.timeIntervalSinceDate(data.startDate)
-        let speed = distance / time
-        println("Speed: \(lengthFormatter.stringFromMeters(speed)) / s")
+            let time = data.endDate.timeIntervalSinceDate(data.startDate)
+            let speed = distance / time
+            print("Speed: \(lengthFormatter.stringFromMeters(speed)) / s")
+        }
     }
 })
 ~~~
@@ -109,8 +111,8 @@ import CoreMotion
 let altimeter = CMAltimeter()
 if CMAltimeter.isRelativeAltitudeAvailable() {
     altimeter.startRelativeAltitudeUpdatesToQueue(NSOperationQueue.mainQueue(), withHandler: { data, error in
-        if !error {
-            println("Relative Altitude: \(data.relativeAltitude)")
+        if let data = data {
+            print("Relative Altitude: \(data.relativeAltitude)")
         }
     })
 }
@@ -124,10 +126,9 @@ if CMAltimeter.isRelativeAltitudeAvailable() {
 import CoreLocation
 
 class LocationManagerDelegate: NSObject, CLLocationManagerDelegate {
-    func locationManager(manager: CLLocationManager!, didUpdateLocations locations: AnyObject[]!) {
-        let location: CLLocation? = locations[0] as? CLLocation
-        if let floor: CLFloor? = location?.floor {
-            println("Current Floor: \(floor?.level)")
+    func locationManager(manager: CLLocationManager, didUpdateLocations locations: [CLLocation]) {
+        if let floor = locations.first?.floor {
+            print("Current Floor: \(floor.level)")
         }
     }
 }
@@ -148,28 +149,28 @@ The following example shows how statistics summed over the duration of the day c
 ~~~{swift}
 import HealthKit
 
-let collection: HKStatisticsCollection? = ...
-let statistics: HKStatistics? = collection!.statisticsForDate(NSDate())
-for item: AnyObject in statistics!.sources {
-    if let source = item as? HKSource {
-        if let quantity: HKQuantity = statistics!.sumQuantityForSource(source) {
-            if quantity.isCompatibleWithUnit(HKUnit.gramUnitWithMetricPrefix(.Kilo)) {
-                let massFormatter = NSMassFormatter()
-                let kilograms = quantity.doubleValueForUnit(HKUnit.gramUnitWithMetricPrefix(.Kilo))
-                println(massFormatter.stringFromKilograms(kilograms))
-            }
+let collection: HKStatisticsCollection? = nil//...
+let statistics: HKStatistics? = collection?.statisticsForDate(NSDate())
+let sources: [HKSource] = statistics?.sources ?? []
 
-            if quantity.isCompatibleWithUnit(HKUnit.meterUnit()) {
-                let lengthFormatter = NSLengthFormatter()
-                let meters = quantity.doubleValueForUnit(HKUnit.meterUnit())
-                println(lengthFormatter.stringFromMeters(meters))
-            }
-
-            if quantity.isCompatibleWithUnit(HKUnit.jouleUnit()) {
-                let energyFormatter = NSEnergyFormatter()
-                let joules = quantity.doubleValueForUnit(HKUnit.jouleUnit())
-                println(energyFormatter.stringFromJoules(joules))
-            }
+for source in sources {
+    if let quantity: HKQuantity = statistics?.sumQuantityForSource(source) {
+        if quantity.isCompatibleWithUnit(HKUnit.gramUnitWithMetricPrefix(.Kilo)) {
+            let massFormatter = NSMassFormatter()
+            let kilograms = quantity.doubleValueForUnit(HKUnit.gramUnitWithMetricPrefix(.Kilo))
+            print(massFormatter.stringFromKilograms(kilograms))
+        }
+        
+        if quantity.isCompatibleWithUnit(HKUnit.meterUnit()) {
+            let lengthFormatter = NSLengthFormatter()
+            let meters = quantity.doubleValueForUnit(HKUnit.meterUnit())
+            print(lengthFormatter.stringFromMeters(meters))
+        }
+        
+        if quantity.isCompatibleWithUnit(HKUnit.jouleUnit()) {
+            let energyFormatter = NSEnergyFormatter()
+            let joules = quantity.doubleValueForUnit(HKUnit.jouleUnit())
+            print(energyFormatter.stringFromJoules(joules))
         }
     }
 }
@@ -196,8 +197,8 @@ NSStream.getStreamsToHostWithName("nshipster.com",
 Also filed under: "small but solid fixes", is this convenience method for `NSString`:
 
 ~~~{swift}
-let string: NSString = "Café"
-let substring: NSString = "É"
+let string: String = "Café"
+let substring: String = "É"
 
 string.localizedCaseInsensitiveContainsString(substring) // true
 ~~~
@@ -245,12 +246,13 @@ The Foundation URL Loading System has remained relatively unchanged since last y
 import Foundation
 
 let session = NSURLSession()
-let task = session.dataTaskWithURL(NSURL(string: "http://nshipster.com"), completionHandler: { data, response, error in
+let task = session.dataTaskWithURL(NSURL(string: "http://nshipster.com")!, completionHandler: { data, response, error in
     // ...
 })
 
 let protectionSpace = NSURLProtectionSpace()
-NSURLCredentialStorage.getCredentialsForProtectionSpace(protectionSpace: protectionSpace, task: task, completionHandler: { credentials in
+let credentialStorage = NSURLCredentialStorage()
+credentialStorage.getCredentialsForProtectionSpace(protectionSpace, task: task, completionHandler: { credentials in
     // ...
 })
 ~~~
@@ -317,7 +319,7 @@ let configuration = WKWebViewConfiguration()
 configuration.preferences = preferences
 
 let webView = WKWebView(frame: self.view.bounds, configuration: configuration)
-let request = NSURLRequest(URL: NSURL(string: "http://nshipster.com"))
+let request = NSURLRequest(URL: NSURL(string: "http://nshipster.com")!)
 webView.loadRequest(request)
 ~~~
 
