--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -292,12 +292,7 @@ Even though the number of people who have actually read something saved for late
 import SafariServices
 
 let url = NSURL(string: "http://nshipster.com/ios7")!
-do {
-    try SSReadingList.defaultReadingList()?.addReadingListItemWithURL(url, title: "NSHipster",
-        previewText: "...")
-} catch let error {
-    print("Error: \(error)")
-}
+try? SSReadingList.defaultReadingList()?.addReadingListItemWithURL(url, title: "NSHipster", previewText: "...")
 ~~~
 
 ~~~{objective-c}
