--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -86,7 +86,7 @@ import CoreMotion
 
 let lengthFormatter = NSLengthFormatter()
 let pedometer = CMPedometer()
-pedometer.startPedometerUpdatesFromDate(NSDate(), withHandler: { data, error in
+pedometer.startPedometerUpdatesFromDate(NSDate()) { data, error in
     if let data = data {
         print("Steps Taken: \(data.numberOfSteps)")
 
@@ -98,7 +98,7 @@ pedometer.startPedometerUpdatesFromDate(NSDate(), withHandler: { data, error in
             print("Speed: \(lengthFormatter.stringFromMeters(speed)) / s")
         }
     }
-})
+}
 ~~~
 
 ## CMAltimeter
@@ -110,11 +110,11 @@ import CoreMotion
 
 let altimeter = CMAltimeter()
 if CMAltimeter.isRelativeAltitudeAvailable() {
-    altimeter.startRelativeAltitudeUpdatesToQueue(NSOperationQueue.mainQueue(), withHandler: { data, error in
+    altimeter.startRelativeAltitudeUpdatesToQueue(NSOperationQueue.mainQueue()) { data, error in
         if let data = data {
             print("Relative Altitude: \(data.relativeAltitude)")
         }
-    })
+    }
 }
 ~~~
 
@@ -149,12 +149,12 @@ The following example shows how statistics summed over the duration of the day c
 ~~~{swift}
 import HealthKit
 
-let collection: HKStatisticsCollection? = nil//...
+let collection: HKStatisticsCollection? = ...
 let statistics: HKStatistics? = collection?.statisticsForDate(NSDate())
 let sources: [HKSource] = statistics?.sources ?? []
 
 for source in sources {
-    if let quantity: HKQuantity = statistics?.sumQuantityForSource(source) {
+    if let quantity = statistics?.sumQuantityForSource(source) {
         if quantity.isCompatibleWithUnit(HKUnit.gramUnitWithMetricPrefix(.Kilo)) {
             let massFormatter = NSMassFormatter()
             let kilograms = quantity.doubleValueForUnit(HKUnit.gramUnitWithMetricPrefix(.Kilo))
@@ -194,11 +194,11 @@ NSStream.getStreamsToHostWithName("nshipster.com",
 
 ## NSString -localizedCaseInsensitiveContainsString
 
-Also filed under: "small but solid fixes", is this convenience method for `NSString`:
+Also filed under: "small but solid fixes", is this convenience method for `String`/`NSString`:
 
 ~~~{swift}
-let string: String = "Café"
-let substring: String = "É"
+let string = "Café"
+let substring = "É"
 
 string.localizedCaseInsensitiveContainsString(substring) // true
 ~~~
@@ -246,15 +246,15 @@ The Foundation URL Loading System has remained relatively unchanged since last y
 import Foundation
 
 let session = NSURLSession()
-let task = session.dataTaskWithURL(NSURL(string: "http://nshipster.com")!, completionHandler: { data, response, error in
+let task = session.dataTaskWithURL(NSURL(string: "http://nshipster.com")!) { data, response, error in
     // ...
-})
+}
 
 let protectionSpace = NSURLProtectionSpace()
 let credentialStorage = NSURLCredentialStorage()
-credentialStorage.getCredentialsForProtectionSpace(protectionSpace, task: task, completionHandler: { credentials in
+credentialStorage.getCredentialsForProtectionSpace(protectionSpace, task: task) { credentials in
     // ...
-})
+}
 ~~~
 
 ## kUTTypeToDoItem
@@ -275,6 +275,23 @@ Most users are completely unaware that most pictures taken with phones these day
 
 New to the Image I/O framework is a convenient new option for `CGImageDestination`: `kCGImageMetadataShouldExcludeGPS`, which does what you'd expect.
 
+~~~{swift}
+import UIKit
+import ImageIO
+import MobileCoreServices
+
+let image = ...
+let fileURL = NSURL(fileURLWithPath: "/path/to/output.jpg")
+let options: NSDictionary = [kCGImageDestinationLossyCompressionQuality as NSString: 0.75,
+                            kCGImageMetadataShouldExcludeGPS as NSString: true]
+
+if let imageDestination = CGImageDestinationCreateWithURL(fileURL, kUTTypeJPEG, 1, nil),
+    let cgImage = image.CGImage
+{
+    CGImageDestinationAddImage(imageDestination, cgImage, options)
+    CGImageDestinationFinalize(imageDestination)
+}
+~~~
 ~~~{objective-c}
 @import UIKit;
 @import ImageIO;
@@ -346,6 +363,22 @@ Imagine: with CloudKit and LocalAuthentication, nearly all of the friction to cr
 
 LocalAuthentication works in terms of an `LAContext` class, which evaluates a specified policy, and gives a thumbs up or thumbs down on user authentication. At no point is any biometric information made available to the application—everything is kept safe on the hardware itself.
 
+~~~{swift}
+let context = LAContext()
+var error: NSError?
+
+if context.canEvaluatePolicy(.DeviceOwnerAuthenticationWithBiometrics, error: &error) {
+    context.evaluatePolicy(.DeviceOwnerAuthenticationWithBiometrics, localizedReason: "...") { success, error in
+        if success {
+            // ...
+        } else {
+            print("Error: \(error)")
+        }
+    }
+} else {
+    print("Error: \(error)")
+}
+~~~
 ~~~{objective-c}
 LAContext *context = [[LAContext alloc] init];
 NSError *error = nil;
