Proper Swift 2 code, fixes #333

--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -5,7 +5,7 @@ category: Cocoa
 excerpt: "Among the most important architectural decisions made when building an app is how to persist data between launches. The question of how, exactly, to re-create the state of the app from the time it was last opened; of how to describe the object graph in such a way that it can be flawlessly reconstructed next time."
 status:
     swift: 2.0
-    reviewed: September 8, 2015
+    reviewed: September 15, 2015
 ---
 
 Among the most important architectural decisions made when building an app is how to persist data between launches. The question of how, exactly, to re-create the state of the app from the time it was last opened; of how to describe the object graph in such a way that it can be flawlessly reconstructed next time.
@@ -104,23 +104,33 @@ class Book: NSObject, NSCoding {
     var categories: [String]
     var available: Bool
 
-    // MARK: NSCoding
+    // Memberwise initializer
+    
+    init(title: String, author: String, pageCount: Int, categories: [String], available: Bool) {
+        self.title = title
+        self.author = author
+        self.pageCount = pageCount
+        self.categories = categories
+        self.available = available
+    }
 
+    // MARK: NSCoding
+    
     required convenience init?(coder decoder: NSCoder) {
-        self.init()
-        
         guard let title = decoder.decodeObjectForKey("title") as? String,
             let author = decoder.decodeObjectForKey("author") as? String,
             let categories = decoder.decodeObjectForKey("categories") as? [String]
-            else {return nil }
+            else { return nil }
         
-        self.title = title
-        self.author = author
-        self.pageCount = decoder.decodeIntegerForKey("pageCount")
-        self.categories = categories
-        self.available = decoder.decodeBoolForKey("available")
+        self.init(
+            title: title,
+            author: author,
+            pageCount: decoder.decodeIntegerForKey("pageCount"),
+            categories: categories,
+            available: decoder.decodeBoolForKey("available")
+        )
     }
-
+    
     func encodeWithCoder(coder: NSCoder) {
         coder.encodeObject(self.title, forKey: "title")
         coder.encodeObject(self.author, forKey: "author")
@@ -172,7 +182,7 @@ class Book: NSObject, NSCoding {
 
 As you can see, `NSCoding` is mostly boilerplate. Each property is encoded or decoded as an object or type, using the name of the property of as the key each time. (Some developers prefer to define `NSString *` constants for each keypath, but this is usually unnecessary).
 
-But boilerplate can be a good things sometimes—with direct control over the entire serialization process, it remains flexible to account for things like:
+But boilerplate can be a good thing sometimes—with direct control over the entire serialization process, it remains flexible to account for things like:
 
 - **Migrations**: If a data model changes—such as adding, renaming, or removing a field—it should maintain compatibility with data serialized in the old format. Apple provides some guidelines on how to go about this in ["Forward and Backward Compatibility for Keyed Archives"](https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/Archiving/Articles/compatibility.html#//apple_ref/doc/uid/20001055-BCICFFGE).
 - **Archiving non-`NSCoding`-compatible Classes**: According to object-oriented design, objects should take responsibility for encoding and decoding to and from a serialization format. However, when a class doesn't come with `NSCoding` support built in, it may be left up to class that uses it to help out.
