--- a/2015-06-22-ios9.md
+++ b/2015-06-22-ios9.md
@@ -201,13 +201,15 @@ fullFormatter.stringFromDate(now)
 // "June 23, 2015, 4:56 PM"
 shortFormatter.stringFromDate(now)
 // "June 15"
+```
 
-// switch locales to "de_DE"
+If you switch locales, you'll need to reset the localized date format to get the correct template for the new locale:
+
+```swift
 fullFormatter.locale = NSLocale(localeIdentifier: "de_DE")
-shortFormatter.locale = NSLocale(localeIdentifier: "de_DE")
-
-// set the date formats again, because other languages use different formats
 fullFormatter.setLocalizedDateFormatFromTemplate("yyyyMMMMddhhmm")
+
+shortFormatter.locale = NSLocale(localeIdentifier: "de_DE")
 shortFormatter.setLocalizedDateFormatFromTemplate("yyMMMM")
 
 fullFormatter.stringFromDate(now)
