--- a/2015-02-09-swift-1.2.md
+++ b/2015-02-09-swift-1.2.md
@@ -133,7 +133,7 @@ I see many commas in our future.
 
 ## Nullability Annotations
 
-When Swift was first released, every call to a Cocoa API method took and returned implicitly unwrapped optionals (i.e., `AnyObject!`). Because they crash a program on access, implicitly unwrapped return values are inherently unsafe if there isn't clear documentation of whether or not a method will return a null value. All those exclamation marks were a sign of bad form. Sure, Swift bridged to the Cocoa APIs, but it sure looked grumpy about it.
+When Swift was first released, every call to a Cocoa API method took and returned implicitly unwrapped optionals (i.e., `AnyObject!`). Because they crash a program on access, implicitly unwrapped return values are inherently unsafe if there isn't clear documentation of whether or not a method will return a null value. All those exclamation marks were a sign of bad form. Sure, Swift bridged to the Cocoa APIs, but it always looked grumpy about it.
 
 As the beta releases rolled on through the summer and fall, internal audits gradually removed the offending punctuation, replacing implicitly unwrapped optionals with either true optionals or non-optional, never-gonna-be-`nil` values. This vastly improved the experience of working with Cocoa, but there was no mechanism to mark up third-party code in the same way, leaving part of the problem in place.
 
