--- a/2015-06-29-cloudkit.md
+++ b/2015-06-29-cloudkit.md
@@ -101,7 +101,7 @@ if let retryAfterValue = error.userInfo[CKErrorRetryAfterKey] as? NSTimeInterval
 }
 ````
 ````objective-c
-double retryAfterValue = error.userInfo[CKErrorRetryAfterKey];
+double retryAfterValue = [error.userInfo[CKErrorRetryAfterKey] doubleValue];
 NSDate *retryAfterDate = [NSDate dateWithTimeIntervalSinceNow:retryAfterValue];
 ````
 
