Mark as non-Swift.

--- a/2014-01-13-nsrange.md
+++ b/2014-01-13-nsrange.md
@@ -4,7 +4,7 @@ author: Mattt Thompson
 category: Cocoa
 excerpt: "NSRange is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits."
 status:
-    swift: t.b.c.
+    swift: n/a
 ---
 
 `NSRange` is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits, which this week's article will help you locate.
