Swift 2.0 error page.

--- a/nshipster.com/404.md
+++ b/nshipster.com/404.md
@@ -2,6 +2,8 @@
 title: NSError 404 - NSHipster
 ---
 
+<article role="article" itemscope itemtype="http://schema.org/Article">
+
 # NSError
 
 ```swift
@@ -12,7 +14,7 @@ let userInfo = [
     NSLocalizedRecoverySuggestionErrorKey: "Go back to the mainstream site."
 ]
 
-let error = NSError(domain: domain, code: code, userInfo: userInfo)
+throw NSError(domain: domain, code: code, userInfo: userInfo)
 ```
 
 ```objective-c
@@ -25,3 +27,5 @@ NSDictionary *userInfo = @{
 
 NSError *error = [[NSError alloc] initWithDomain:domain code:code userInfo:userInfo];
 ```
+
+</article>
