Minor edits around returning an underlying NSError.

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -134,20 +134,24 @@ To pass an error to an `NSError **` parameter, do the following:
 - (BOOL)validateObject:(id)object
                  error:(NSError * __autoreleasing *)outError
 {
+    // call another API, passing &error into its (NSError **) parameter
     NSError *error = nil;
-    BOOL success = ...; // call an API passing &error into its (NSError **) parameter
+    BOOL success = ...; 
 
     if (!success) {
-      if (outError) {
-        *outError = [NSError errorWithDomain:NSHipsterErrorDomain
-                                        code:-42
-                                    userInfo:@{NSUnderlyingErrorKey: error}];
-      }
+        if (outError) {
+            *outError = [NSError errorWithDomain:NSHipsterErrorDomain
+                                            code:-42
+                                        userInfo:@{NSUnderlyingErrorKey: error}];
+        }
     }
 
     return success;
 }
 ~~~
+
+The root error, if one exists, should be returned as part of your custom error's `userInfo` dictionary as the value for `NSUnderlyingErrorKey`.
+
 
 ## `NSURLErrorDomain` & `CFNetworkErrors`
 
