--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -12,7 +12,7 @@ Internationalization is like flossing: everyone knows they should do it, but pro
 
 And like any habit, it becomes second-nature with practice, to the point that you couldn't imagine _not_ doing it. All it takes is for someone to show you the way.
 
-Let NSHipster be your dental hygienist Virgil through these foreign lands.. without all of the lecturing about tooth decay (promsies!)
+Let NSHipster be your dental hygienist Virgil through these foreign lands... without all of the lecturing about tooth decay (promise!)
 
 ## i18n versus l10n
 
