Switch to asset url from config.

--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -20,7 +20,7 @@ translator: Croath Liu
 
 很多像HTTP的协议中会定义有一定的规范结构，例如：username、password、port, 以及hierarchical part 中的 path：
 
-![URL Structure](http://nshipster.s3.amazonaws.com/nsurl.png)
+![URL Structure]({{ site.asseturl }}/nsurl.png)
 
 对网络编程的扎实理解植根于对于 URL 各个部分的完全的熟悉。作为软件开发工程师，这意味着在你的编程语言标准库中存在着对URI进行指挥功能的命令。
 
