--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -51,7 +51,7 @@ excerpt: "#pragma 声明是彰显Objective-C工艺的标志之一。虽然 #prag
 
 在你的 `@implementation` 中使用 `#pragma mark` 来将代码分割成逻辑区块。这些逻辑区块不仅仅使得阅读代码本身容易许多，也为Xcode源导航增加了视觉线索（`#pragma mark` 声明前有一个水平分割并由破折号（`－`）开始）。
 
-![Xcode Sections](http://nshipster.s3.amazonaws.com/pragma-xcode-sections.png)
+![Xcode Sections]({{ site.asseturl }}/pragma-xcode-sections.png)
 
 如果你的类符合任何`@protocols`，先将各协议的方法放在一起，并添加`#pragma mark`以及协议的名称。另一个好的惯例是将各子类方法根据它们的超类组合放在一起。比如，一个`NSInputStream`子类应该放在`NSStream`的组里。如`IBAction`的出口，或者对应于目标／动作，通知，或者KVO选择器之类的方法也值得拥有它们各自的区块。
 
