Updated to include an App Transport Security error (-1022).

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -239,6 +239,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 | -1019<br>`kCFURLErrorCallIsActive` | <q>The connection failed because a call is active.</q> |
 | -1020<br>`kCFURLErrorDataNotAllowed` | <q>The connection failed because data use is currently not allowed on the device.</q> |
 | -1021<br>`kCFURLErrorRequestBodyStreamExhausted` | <q>The connection failed because its request’s body stream was exhausted.</q> |
+| -1022<br>`kCFURLErrorAppTransportSecurityRequiresSecureConnection` | <q>The resource could not be loaded because the App Transport Security policy requires the use of a secure connection.</q> |
 
 ### File Errors
 
