--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -18,7 +18,7 @@ Objective-C builds on C's representation of _nothing_ by adding `nil`. `nil` is 
 
 On the framework level, Foundation defines `NSNull`, which defines a class method, `+null`, which returns the singleton `NSNull` object. `NSNull` is different from `nil` or `NULL`, in that it is an actual object, rather than a zero value.
 
-Additionally, in [Foundation/NSObjCRuntime.h](https://gist.github.com/4469665), `Nil` is defined as a _class_ pointer to nothing. This lesser-known title-case cousin of `nil` doesn't show up much very often, but it's at least worth noting.
+Additionally, in `Foundation/NSObjCRuntime.h`, `Nil` is defined as a _class_ pointer to nothing. This lesser-known title-case cousin of `nil` doesn't show up much very often, but it's at least worth noting.
 
 ## There's Something About `nil`
 
